--- a/src/components/sequence/styles.module.css
+++ b/src/components/sequence/styles.module.css
@@ -23,6 +23,7 @@
   top: 10px;
   right: 10px;
   cursor: grab;
+  user-select: none;
 }
 
 .sequence {
